# bm-fwup

./: .gitignore  CMakeLists.txt  config.yml  cp-to-exp.sh  main.cpp  run.sh
algo/: algo.h  bmfwup.cpp  bmfwup.h  wunminer.cpp  wunminer.h
ds/: database.cpp  database.h  item.cpp  item.h  itemset.cpp  itemset.h  nlist.cpp  nlist.h  transaction.cpp  transaction.h  umncode.cpp  umncode.h  umnnode.cpp  umnnode.h  umntree.cpp  umntree.h
experimental/: config.yml  plot.sh  plotter.py  requirements.txt  runner.py  scenarios.yml
experimental/results.bak/: accidents.csv  connect.csv
experimental/runs/20260303_234910/results/: retail.csv
utils/: common.cpp  common.h  config.cpp  config.h  input.cpp  input.h  logger.cpp  logger.h  stat.cpp  stat.h  variable.cpp  variable.h
